<resources>
    <string name="app_name">TecentNews</string>
    <string name="news">新闻</string>
    <string name="me">我</string>
    <string name="live">直播</string>
    <string name="recommend">推荐</string>
    <string name="yaowen">要闻</string>
    <string name="aoyun">奥运</string>
    <string name="shipin">视频</string>
    <string name="sichuan">四川</string>
    <string name="yule">娱乐</string>
    <string name="tiyu">体育</string>
    <string name="nba">NBA</string>
    <string name="caijing">财经</string>
    <string name="qiche">汽车</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="pujing1">\t\t\t参考消息网8月10日报道 俄媒称，土耳其《自由报》（Hurriyet）援引外交消息人士的资料报道，土耳其总统埃尔多安关于俄罗斯苏-24战机事件的信函使用俄语撰写，埃尔多安使用了俄语的“对不起”。</string>
    <string name="pujing2">\t\t\t俄罗斯卫星网8月9日报道，此前，外国媒体就埃尔多安究竟使用了哪个词及其英语和土耳其语意思的问题众说纷纭。 该报消息人士说，土耳其和俄罗斯代表5月至6月初对信函内容和形式进行了数次协商。最终，与俄罗斯翻译及哈萨克斯坦驻安卡拉大使馆外交官共同研究草稿的土耳其总统发言人易卜拉欣·卡林选择使用俄语词汇“对不起”。这个词“比‘很遗憾’（sorrу）更加有力，但没有‘请求宽恕’（apology）那样的表达方式强烈。”\n \t\t\t 2016年6月底俄罗斯总统新闻秘书佩斯科夫向记者表示，埃尔多安在致普京的信函中就击落飞机事件表示道歉，并对飞行员佩什科夫牺牲表示哀悼。安卡拉此举满足了俄罗斯提出的条件：道歉并开始调查涉嫌杀害俄飞行员的人。\n \t\t\t一系列媒体怀疑埃尔多安确实在信函中道歉的情况。佩斯科夫表示，信中有遗憾的措辞和“对不起”一词，但他没有进一步指出信函用何种语言书写。\n \t\t\t2015年11月土耳其战斗机在叙利亚击落俄罗斯苏-24轰炸机，此后俄土关系出现危机。俄罗斯总统称这一事件是恐怖分子帮凶“暗箭伤人”。俄罗斯对土耳其采取了一系列经济限制措施。</string>
    <string name="live_title">奥运24小时 | 李晓霞丁宁女乒争金</string>
    <string name="detail_title">外媒：土总统曾致信普京 就战机事件用俄语道歉</string>
</resources>
