<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--<LinearLayout-->
            <!--android:id="@+id/linear_layout"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
            <!--style="@style/TabText"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_margin="2dp"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/yaowen" />-->

            <!--<TextView-->
            <!--style="@style/TabText"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_margin="2dp"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/aoyun" />-->

            <!--<TextView-->
            <!--style="@style/TabText"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_margin="2dp"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/shipin" />-->

            <!--<TextView-->
            <!--style="@style/TabText"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_margin="2dp"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/sichuan" />-->

            <!--<TextView-->
            <!--style="@style/TabText"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_margin="2dp"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/yule" />-->

            <!--<TextView-->
            <!--style="@style/TabText"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_margin="2dp"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/tiyu" />-->

            <!--<TextView-->
            <!--style="@style/TabText"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_margin="2dp"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/nba" />-->

            <!--<TextView-->
            <!--style="@style/TabText"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_margin="2dp"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/caijing" />-->

            <!--<TextView-->
            <!--style="@style/TabText"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_margin="2dp"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/qiche" />-->


            <!--</LinearLayout>-->

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_yaowen"
                    style="@style/TabText"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/yaowen" />

                <RadioButton
                    android:id="@+id/radio_aoyun"
                    style="@style/TabText"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/aoyun" />

                <RadioButton
                    android:id="@+id/radio_shipin"
                    style="@style/TabText"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/shipin" />

                <RadioButton
                    android:id="@+id/radio_sichuan"
                    style="@style/TabText"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/sichuan" />

                <RadioButton
                    android:id="@+id/radio_yule"
                    style="@style/TabText"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/yule" />

                <RadioButton
                    android:id="@+id/radio_tiyu"
                    style="@style/TabText"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/tiyu" />

                <RadioButton
                    android:id="@+id/radio_nba"
                    style="@style/TabText"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/nba" />

                <RadioButton
                    android:id="@+id/radio_caijing"
                    style="@style/TabText"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/caijing" />

                <RadioButton
                    android:id="@+id/radio_qiche"
                    style="@style/TabText"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/qiche" />

            </RadioGroup>

            <!--<ImageView-->
            <!--android:id="@+id/tab_news_line"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="3dp"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_marginLeft="2dp"-->
            <!--android:background="@android:color/holo_blue_dark" />-->
        </RelativeLayout>


    </HorizontalScrollView>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

</LinearLayout>
